<resources>
    <string name="activity1_name">Two Activities</string>
    <string name="activity2_name">Second Activity</string>
    <string name="Title_text">Star Wars Scripts</string>
    <string name="button_one">Text 1</string>
    <string name="button_two">Text 2</string>
    <string name="button_three">Text 3</string>

    <string name="episode1">A long time ago in a galaxy far, far away....
\n\nEPISODE 1 THE PHANTOM MENACE
\n Turmoil has engulfed the Galactic Republic.
\n The taxation of trade routes to outlaying star systems is in dispute.
\n Hoping to resolve the matter with a blockade of deadly battleships,
\n the greedy Trade Federation has stopped all shipping to the small planet of Naboo.
\n While the congress of the Republic endlessly debates this alarming chain of events,
\n the Supreme Chancellor has secretly dispatched two Jedi Knights,
\n the guardians of peace and justice in the galaxy, to settle the conflict.....
\n\n  PAN DOWN to reveal a small space cruiser heading TOWARD CAMERA at great speed.
\n  PAN with the cruiser as it heads toward the beautiful green planet of Naboo,
\n  which is surrounded by hundreds of Trade Federation battleships.
\n  INT REPUBLIC CRUISER - COCKPIT
\n  In the cockpit of the cruise, the CAPTAIN and PILOT maneuver closer to one of the battleships.
\n  QUI-GON: (off screen voice) Captain.
\n  The Captain turns to an unseen figure sitting behind her.
\n  CAPTAIN: Yes, sir?
\n  QUI-GON: (V.O) Tell them we wish to board at once.
\n  The CAPTAIN looks to her view screen, where NUTE GUNRAY, a Neimoidian trade viceroy, waits for a reply.
\n  CAPTAIN: With all due respect, the Ambassadors for the Supreme Chancellor wish to board immediately.
\n  NUTE: Yes, yes, of course... as you know, our blockade is perfectly legal, and we would be happy
        to receive the Ambassador.
\n  The screen goes black. Out the cockpit window, the sinister battleship looms ever closer.
\n  EXT FEDERATION BATTLESHIP - DOCKING BAY - SPACE (FX)
\n  The small space cruiser docks in the enormous main bay of the Federation battleship.
\n  INT FEDERATION BATTLESHIP - DOCKING BAY - SPACE
\n  A PROTOCOL DROID, TC-14, waits at the door to the docking bay.
\n  The door opens, and the Republic cruiser can be seen in the docking bay. Two darkly robed figures are greeted by TC-14.
\n  TC-14: Im TC-14 at your service. This way, please.
\n  They move off down the hallway.
\n  INT FEDERATION BATTLESHIP - CONFERENCE ROOM
\n  A door slides open, and the two cloaked shapes are led PAST CAMERA into the formal conference room by TC-14.
\n  TC-14: We are greatly honored by your visit Ambassadors. Make yourselves comfortable. My master will be with you shortly.
\n  The droid bows before OBI-WAN KENOBI and QUI-GON JINN. She backs out the door and it closes. The JEDI lower their hoods and look out a large window at the lush green planet of Naboo. QUI-GON forty years old, has long brown hair in a ponytail. He is tall and striking, with blue eyes. OBI-WAN is twenty five, with very short brown hair, pale skin, and blue eyes.
\n  OBI-WAN: I have a bad feeling about this.
\n  QUI-GON: I dont sense anything.
\n  OBI-WAN: Its not about the mission, Master, its something... elsewhere... elusive.
\n  QUI-GON: Dont center on your anxieties, Obi-Wan. Keep your concentration here and now where it belongs.
\n  OBI-WAN: But Master Yoda says I should be mindful of the future...
\n  QUI-GON: ... but not at the expense of the moment. Be mindful of the living Force, my young Padawan.
\n  OBI-WAN: Yes, Master.
    </string>

    <string name="episode2">A long time ago in a galaxy far, far away....
        \n\nEPISODE 2 Attack of the Clones
        \n There is unrest in the Galactic Senate. Several thousand
        \n solar systems have declared their intentions to leave the Republic.
        \n The separatist movement, under the leadership of the
        \n mysterious Count Dooku, has made it difficult for the
        \n limited number of Jedi Knights to maintain peace and order in the galaxy.
        \n Senator Amidala, the former Queen of Naboo, is returning to
        \n the Galactic Senate to vote on the critical issue of
        \n creating an ARMY OF THE REPUBLIC to assist the overwhelmed Jedi....
        PAN UP to reveal the amber city planet of Coruscant. Two
\n Yellow Naboo Fighters fly OVER CAMERA toward the planet, followed by a large Naboo Cruiser and one more Fighter.
\n 2 INT. NABOO CRUISER - DAWN 2
\n The LIEUTENANT and two SECURITY OFFICERS address SENATOR AMIDALA as the Cruiser nears the planet.
\n LIEUTENANT: Senator, we’re making our final approach in to Coruscant.
\n SENATOR AMIDALA: Very good, Lieutenant.
\n 3 EXT. CITYSCAPE, CORUSCANT - DAWN 3
\n The ships skim across the surface of the city landscape.
\n The sun glints off the chrome hulls of the sleek Naboo spacecraft as they navigate between the buildings of the capital planet.
\n 4 EXT. CORUSCANT, LANDING PLATFORM - DAWN 4
\n Two Naboo Fighters land on one leaf of a three-leaf-clover landing platform.
\n The Naboo Cruiser lands on the central leaf, and the third Fighter lands on the remaining platform.
\n A small GROUP OF DIGNITARIES waits to welcome the Senator.
\n One of the FIGHTER PILOTS jumps from the wing of his ship and removes his helmet.
\n He is CAPTAIN TYPHO, SENATOR AMIDALA’S Security Officer.
\n He moves over to a WOMAN PILOT.
\n CAPTAIN TYPHO: We made it. I guess I was wrong, there was no danger at all.
    </string>

    <string name="episode3">A long time ago in a galaxy far, far away....
       \n\n EPISODE 3 REVENGE OF THE SITH
        \n War! The Republic is crumbling under attacks by the ruthless Sith Lord,
        \n Count Dooku. There are heroes on both sides. Evil is everywhere.
        \n In a stunning move, the fiendish droid leader, General Grievous,
        \n has swept into the Republic capital and kidnapped Chancellor Palpatine,
        \n leader of the GalacticSenate. As the Separatist Droid Army attempts to flee
        \n the besieged capital with their valuable hostage, two Jedi Knights
        \n lead a desperate mission to rescue the captive Chancellor....
\n\n PAN DOWN to reveal a REPUBLIC ATTACK CRUISER. Continue to PAN with the Cruiser as TWO JEDI STARFIGHTERS enter and head toward an enemy Battle Cruiser. TRUCK with the Jedi Fighters as they maneuver in unison, dodging flack and enemy laser fire. R2-D2 is on Anakins ship. R4-P17 is on Obi-Wans ship. A giant space battle is revealed as the tiny Jedi ships continue their assault in a synchronous ballet.
\n 2 INT. OBI-WANS STARFIGHTER COCKPIT-SPACE
\n OBI-WAN bounces through the flack with a frown. His ship rocks violently.
\n 3 INT. ANAKINS STARFIGHTER COCKPIT-SPACE
\n ANAKIN smiles as he blasts a TRADE FEDERATION DROID DROP FIGHTER.
\n ANAKIN: There isnt a droid made that can out fly you, Master, and no other way to get to the Chancellor . . .
\n OBI-WAN: Look out, four droids inbound . . .
\n 4 EXT. CORUSCANT-SPACE BATTLE
\n The TWO JEDI FIGHTERS swerve in unison as FOUR TRADE FEDERATION DROID DROP FIGHTERS attack. After several clever moves by the Jedi, two of the FEDERATION DROID DROP FIGHTERS collide with each other in a ball of flame.
\n 5 INT. OBI-WANS STARFIGHTER COCKPIT-SPACE
\n OBI-WAN struggles to maintain control of his ship.
\n OBI-WAN: Weve got to split them up.
\n ANAKIN: Break left, fly through the guns on that tower.
\n OBI-WAN flies to the left of a huge tower on a REPUBLIC CRUISER. The TWO DROID DROP FIGHTERS follow.
\n OBI-WAN: Easy for you to say . . . why am I always the bait?
\n ANAKIN: Dont worry. Im coming around behind you.
\n OBI-WAN deftly maneuvers around a large Starships superstructure, but the TWO DROID FIGHTERS stay on his tail, BLASTING him with intense laser fire.
\n OBI-WAN: Anakin, theyre all over me!
\n ANAKIN: Dead ahead! Closing . . . lock onto him, Artoo . . .
\n ARTOO BEEPS his reply as ANAKIN swoops in for the kill. ANAKIN BLASTS one of the DROID DROP FIGHTERS. It EXPLODES.
\n ANAKIN: (continuing, laughs) We got him, Artoo!
\n ANAKIN BLASTS away at the second DROID DROP FIGHTER as ARTOO BEEPS an angry warning.
\n ANAKIN: I copy, Artoo.
    </string>



</resources>